updated legends of heroes recipe box project

--- a/Javascript/AngularJS/04-to-do-app/src/app/app.component.html
+++ b/Javascript/AngularJS/04-to-do-app/src/app/app.component.html
@@ -4,8 +4,11 @@
 </h1>
 <h3>{{ currentFocus}}</h3>
   <ul>
-    <li [class]="priorityColor(currentTask)" (click)="isDone(currentTask)" *ngFor="let currentTask of tasks">
-     {{currentTask.description}} <button (click)="editTask(currentTask)"> Edit! </button>
+    <li *ngFor="let currentTask of tasks">
+      <div [class]="priorityColor(currentTask)" (click)="isDone(currentTask)">
+        {{currentTask.description}}
+      </div>
+      <button (click)="editTask(currentTask)"> Edit! </button>
     </li>
   </ul>
   <hr>
