--- a/Javascript/AngularJS/05-recipe-box/src/app/app.component.css
+++ b/Javascript/AngularJS/05-recipe-box/src/app/app.component.css
@@ -11,6 +11,9 @@
   padding: 20px;
 }
 
+.sub-heading b {
+ color: white;
+}
 
 h3{
   color: #8E0000;
@@ -27,12 +30,18 @@ h3{
 
 .recipe-card {
   background-color: #e1e4ea;
+  padding: 2%;
   margin-top: 2%;
+}
+
+.details {
+  background-color: #e1e4ea;
   height: 750px;
 }
 
 .recipe-heading {
   padding-top: 10px;
+  cursor: pointer;
 }
 
 .sub-heading {
@@ -58,4 +67,17 @@ h3{
   float: right;
   width: 40%;
   clear: right;
+}
+
+.recipe-details {
+  overflow: auto;
+}
+
+.edit-btn {
+  float: right;
+  clear: both;
+}
+
+.editForm {
+  clear: both;
 }
