working on social media clone react project- refactored to be more react-y and reusable

--- a/Javascript/ReactJS/02-social-media-clone/src/styles/components/Navbar.css
+++ b/Javascript/ReactJS/02-social-media-clone/src/styles/components/Navbar.css
@@ -25,3 +25,9 @@
     margin-left: 110px;
     margin-right: 10px;
 }
+
+hr {
+    border-top-width: 1px;
+    height: 1px;
+    border-color: grey;
+}
